# kheteebaadi-app

./: .env.example.prod  .gitignore  KEYSTORE_CREDENTIALS.txt  PLAY_STORE_RELEASE.md  PRODUCTION_DEPLOYMENT.md  README.md  deploy-docker.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  railway.json
backend/: .dockerignore  COMPLETION_REPORT.txt  Dockerfile  Dockerfile.worker  FILES_INDEX.txt  INTEGRATION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_TEST_REFERENCE.md  STARTUP.md  TESTING.md  TEST_SUMMARY.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py  security.py
backend/app/middleware/: logging_middleware.py  rate_limiter.py
backend/app/models/: __init__.py  mandi.py  order.py  sync_log.py  user.py  village.py
backend/app/schemas/: __init__.py  auth.py  mandi.py  order.py  sync.py
backend/app/services/: mandi_service.py  order_service.py  otp_service.py  sync_service.py  user_service.py  village_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_phase2_schema.sql
backend/monitoring/: cloudwatch_alarms.tf  dashboards.json
backend/scripts/: backup_verify.sh  entrypoint.sh
backend/tests/: README.md  conftest.py  pytest.ini
backend/tests/integration/: test_auth_flow.py  test_sync_batch.py  test_webhook_idempotency.py
backend/tests/load/: k6_harvest_spike.js  k6_payment_stress.js  (+1 more)
(+200 files in other folders)
